# json2gsc

./: .gitmodules  CMakeLists.txt  CMakePresets.json.license  README.md
Assets/: Dan_JumpV3.json  [sob]EasyJump.json  bc_bocli.json  bitch.json  ch_quickie.json  ch_space.json  cj_cow.json  cj_hallwayofdoom.json  cj_wolfjump.json  cls_industries.json  cp_easy_jump.json  cp_sirens_call.json  cs_smoke.json  ct_aztec.json  ddd_easy_jump.json  double_vision.json  fm_squishydeath_easy.json  fm_squishydeath_hard.json  funjump.json  gg_heaven.json  gg_neon.json  gg_neon_v2.json  gg_neon_v3.json  gg_shortbounce.json  groms_skatepark.json  hardjump.json  jm_House_of_pain.json  jm_Krime.json  jm_bounce.json  jm_canonjump.json  jm_castle.json  jm_classique.json  jm_crispy.json  jm_everything.json  jm_fear.json  jm_foundry.json  jm_gap.json  jm_gayfected.json  jm_ghoti.json  jm_hollywood.json  (+60 more)
CMake/: AssureOutOfSourceBuilds.cmake  CheckBuildType.cmake  CommonCppFlags.cmake  EnableCompileCommands.cmake  EnableCompilerDiagnostics.cmake  EnableSanitizers.cmake  Optimization.cmake  SetProjectWarnings.cmake  SetStandards.cmake
Source/: CMakeLists.txt  Main.cpp
